<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyScrum</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Login</item>
        <item >Signup</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/home</item>
        <item>@drawable/login</item>
        <item>@drawable/signup</item>
    </array>
    
    <!-- Nav Drawer Menu Items When Logged In -->
    <string-array name="nav_drawer_items_logged_in">
        <item >Home</item>
        <item >Projects</item>
        <item >Account Settings</item>
        <item >Sign out</item>
    </string-array>
    
    <array name="nav_drawer_icons_logged_in">
        <item>@drawable/home</item>
        <item>@drawable/projects</item>
        <item>@drawable/settings</item>
        <item>@drawable/logout</item>
    </array>
    
    
    <string-array name="users">
        <item>jjalageas</item>
        <item>fcastandet</item>
        <item>rherbert</item>
        <item>tdiallo</item>
        <item>jport</item>
    </string-array>
    
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
    
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="welcome">Welcome to MyScrum!</string>
    
    <string name="login_screen">Log in</string>
    <string name="username">Username</string>
	<string name="password">Password</string>
	<string name="back">Back</string>
	
	<string name="first_name">First name</string>
	<string name="last_name">Last name</string>
	<string name="email">Email</string>
	<string name="password_confirmation">Confirm Password</string>
	<string name="sprints">Sprints</string>
	<string name="team">Team</string>
    <string name="tests">Tests</string>
    <string name="backlog">Backlog</string>
    <string name="projects">Projects</string>
    <string name="account_settings">Account Settings</string>
	<string name="add_user">Add User</string>
	<string name="project_name">Project Name:</string>
	<string name="repository">Repository:</string>
	<string name="create_project">Create Project</string>
	<string name="title">Title</string>
	<string name="description">Description</string>
	<string name="difficulty">Difficulty</string>
	<string name="priority">Priority</string>
    <string name="submit">Submit</string>
    <string name="username2">Username:</string>
    <string name="first_name2">First Name:</string>
    <string name="last_name2">Last Name:</string>
    <string name="rank">Rank:</string>
    <string name="email2">Email:</string>
    <string name="state">State</string>
    <string name="tester">Tester</string>
    <string name="user_story">User Story</string>
    <string name="input">Input</string>
    <string name="test_case">Test Case</string>
    <string name="expected_result">Expected Result</string>
    <string name="blank"> </string>
    <string name="back_to_backlog">Back to Backlog</string>
    <string name="duration">Duration</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="user_stories">User Stories</string>
    <string name="repo">Repository</string>
    <string name="public_">Public</string>
    <string name="burndown_chart">Burndown Chart</string>
    <string name="task_distribution">Task Completion Distribution</string>
    <string name="status">Status</string>
    
</resources>
