<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="26dp"
        android:layout_toLeftOf="@+id/submit"
        android:text="@string/username"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/username"
        android:layout_marginTop="30dp"
        android:layout_toLeftOf="@+id/submit"
        android:text="@string/first_name"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/first_name"
        android:layout_below="@+id/first_name"
        android:layout_marginTop="36dp"
        android:layout_toLeftOf="@+id/submit"
        android:text="@string/last_name"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/last_name"
        android:layout_below="@+id/last_name"
        android:layout_marginTop="35dp"
        android:layout_toLeftOf="@+id/submit"
        android:text="@string/email"
        android:textColor="#000000" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="14dp"
        android:layout_marginRight="20dp"
        android:text="Submit" />

</RelativeLayout>