<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="26dp"
        android:textColor="#000000"
        android:text="@string/title" />

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/description"
        android:layout_alignLeft="@+id/edit_difficulty"
        android:layout_alignRight="@+id/edit_difficulty"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textColor="#000000" />
    
    <EditText
        android:id="@+id/edit_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/description"
        android:layout_alignLeft="@+id/edit_title"
        android:layout_alignRight="@+id/edit_title"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/edit_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/difficulty"
        android:layout_toRightOf="@+id/description"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/edit_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/priority"
        android:layout_alignLeft="@+id/edit_difficulty"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title"
        android:layout_below="@+id/title"
        android:layout_marginTop="29dp"
        android:text="@string/description"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/difficulty"
        android:layout_centerVertical="true"
        android:text="@string/priority"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_priority"
        android:layout_alignLeft="@+id/description"
        android:text="@string/difficulty"
        android:textColor="#000000" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/edit_priority"
        android:layout_marginBottom="22dp"
        android:text="@string/submit" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/submit"
        android:layout_toLeftOf="@+id/submit"
        android:text="Back To Backlog" />

</RelativeLayout>
